--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
+html, body {
+  overflow-x: hidden;
+}
+
+@font-face {
+  font-family: "FontAwesome";
+  src: url("/fonts/fa-solid-900.woff2") format("woff2");
+  font-display: swap;
+}
 
 
 /* logo */
@@ -71,17 +80,6 @@ input[type="checkbox"]:checked+.accordion-label+.content {
 }
 
 
-/* Arrow */
-.accordion-label .arrow {
-  margin-left: auto;
-  transition: transform 0.3s ease;
-  font-size: 14px;
-  color: #333;
-}
-
-input[type="checkbox"]:checked+.accordion-label .arrow {
-  transform: rotate(180deg);
-}
 
 .content {
   max-height: 0;
@@ -102,23 +100,7 @@ input[type="checkbox"]:checked+.accordion-label+.content {
 
 
 
-/* parallax */
 
-.parallax {
-  background-image: url("/Assets/pexels-armin-rimoldi-5553657.jpg");
-  min-height: 392px;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  position: relative;
-  color: white;
-
-  display: flex;
-  align-items: center;
-  text-align: left;
-}
 
 /* Fix for mobile screens */
 @media (max-width: 768px) {
@@ -181,24 +163,7 @@ input[type="checkbox"]:checked+.accordion-label+.content {
 
 /* parallax partners */
 
-/* parallax */
-.parallax2 {
-  background-image: url("/Assets/pexels-sora-shimazaki-5673475.jpg");
-  min-height: 392px;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 
-  position: relative;
-  color: white;
-
-  
-  display: flex;
-  align-items: center;
- 
-  text-align: left;
-}
 
 @media (max-width: 768px) {
   .parallax2 {
@@ -234,4 +199,58 @@ input[type="checkbox"]:checked+.accordion-label+.content {
 
 .service-icon:hover {
   transform: scale(1.2);
+}
+
+
+
+/* welcome animation */
+/* Center container */
+.loading-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000; /* black background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Loader animation */
+.tgs-loader {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.tgs-loader span {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #ffaa01; /* Orange */
+  animation: bounce 1.2s infinite;
+  display: inline-block;
+}
+
+/* Stagger the letters */
+.tgs-loader span:nth-child(1) {
+  animation-delay: 0s;
+}
+.tgs-loader span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.tgs-loader span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+/* Bounce keyframes */
+@keyframes bounce {
+  0%, 80%, 100% {
+    transform: translateY(0);
+    color: #ffaa01; /* Orange */
+  }
+  40% {
+    transform: translateY(-20px);
+    color: #fff; /* White on top of bounce */
+  }
 }
